--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Define the root logger with appender file
 #log = /usr/home/log4j
-logger=/Users/dzianismitrakhovich/Documents/Java IDEA Projects/Restaurant
+logger=../webapp/WEB-INF/logs
 log4j.rootLogger=INFO, FILE, errorfile
 
 # Define the file appender
