--- a/DAO/pom.xml
+++ b/DAO/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.193</version>
+        </dependency>
 
     </dependencies>
 </project>
