Tests completed, delete user method added, locale added

--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -9,4 +9,5 @@ path.page.showcourses=/showcourses.jsp
 path.page.courseadded=/courseadded.jsp
 path.page.error=/error/error.jsp
 path.page.register=/register.jsp
+path.page.showusers=/showusers.jsp
 ##############################
