DB script runs on startup, bugs fixed

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -88,6 +88,13 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+
     </dependencies>
 
     <reporting>
